--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/stars/dxxp999/lists/mini-projects'"
               >
                 Mini Projects
               </button>
