--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <div class="text-container">
             <p>
-              Hello there, I am Deepjyoti, currently a B.Tech 3rd year student in the dept. of Mechanical Engg., TU. I am also a freelancer and a graphic designer. Apart from academics and creative study I am preparing for job interviews as my skills include UI/UX, Web development, Problem solving and core CS concepts.
+              Greetings! I'm Deepjyoti, a 3rd-year B.Tech student in Mechanical Engineering at TU, doubling as a freelancer and adept graphic designer. With a focus on UI/UX, web development, and core CS concepts, I'm actively preparing for job interviews. My portfolio showcases a fusion of technical prowess and creative flair, emphasizing intuitive design and robust solutions. Let's connect for potential collaborations in the dynamic tech landscape. Thank you for visiting!
             </p>
           </div>
         </div>
@@ -260,9 +260,12 @@
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
+
       <div class="experience-details-container">
         <div class="about-containers">
-          <div class="details-container color-container">
+
+          
+          <div class="details-container subClass color-container">
             <div class="article-container">
               <img
                 src="./assets/project-1.png"
@@ -286,7 +289,7 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <div class="details-container subClass color-container">
             <div class="article-container">
               <img
                 src="./assets/project-2.png"
@@ -310,7 +313,7 @@
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <div class="details-container subClass color-container">
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
@@ -321,8 +324,8 @@
             <h2 class="experience-sub-title project-title">Graphic Design and Mini Projects</h2>
             <div class="btn-container">
               <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                class="btn btn-color-2 project-btn graphicBtn"
+                onclick="location.href='https://www.instagram.com/dxxp.visuals/'"
               >
                 Graphic Design Projects
               </button>
@@ -334,6 +337,8 @@
               </button>
             </div>
           </div>
+
+        </div>
         </div>
       </div>
       <img
