--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <div class="text-container">
             <p>
-              Greetings! I'm Deepjyoti, a 3rd-year B.Tech student in Mechanical Engineering at TU, doubling as a freelancer and adept graphic designer. With a focus on UI/UX, web development, and core CS concepts, I'm actively preparing for job interviews. My portfolio showcases a fusion of technical prowess and creative flair, emphasizing intuitive design and robust solutions. Let's connect for potential collaborations in the dynamic tech landscape. Thank you for visiting!
+              Greetings! I'm Deepjyoti, a 3rd-year B.Tech student in Mechanical Engineering at TU, doubling as a developer and adept graphic designer. With a focus on UI/UX, web development, and core CS concepts, I'm actively preparing for job interviews. My portfolio showcases a fusion of technical prowess and creative flair, emphasizing intuitive design and robust solutions. Let's connect for potential collaborations in the dynamic tech landscape. Thank you for visiting!
             </p>
           </div>
         </div>
